Landing Page 06/style.scss
/* ... */
@mixin buttonNoBGNoBorder() {
  background-color: transparent;
  border: none;
  cursor: pointer;
}

@mixin expandBorderFromCenter() {
  &::before,
  &::after {
    content: "";
    position: absolute;
    top: 0px;
    width: 0;
    height: 3px;
    background-color: $orange;
    transition: width 0.3s ease-in, left 0.3s ease-in, right 0.3s ease-in;
  }

  &::before {
    left: 50%; /* Start from the middle */
    width: 0;
  }

  &::after {
    right: 50%; /* Start from the middle */
    width: 0;
  }

  &:active::before,
  &:hover::before,
  &:focus-visible::before {
    width: 50%;
    left: 0; /* Move the left element back to the left edge */
  }

  &:active::after,
  &:hover::after,
  &:focus-visible::after {
    width: 50%;
    right: 0; /* Move the right element back to the right edge */
  }
}

@mixin buttonContainer() {
  display: flex;
  justify-content: space-between;
  z-index: 3;
  position: relative;
  padding: 6px;
  width: 100%;

  button {
    margin: 50% 1%;
    background: transparent;
    border: none;
    cursor: pointer;
    &[id="prev-btn"] {
      position: relative;
      top: 16px;
    }
  }
}

// BODY

body {
  font-family: $font-kumbh;
  background-color: $white;
}

// NAVIGATIONS

header {
  position: relative;
  background-color: $white;
  box-shadow: $box-shadow;
  padding-bottom: 20px;
}
.menu {
  padding: 15px;
  display: flex;
  justify-content: space-between;
  max-width: 1350px;

  @media screen and (max-width: 347px) {
    flex-wrap: wrap;
  }

  .cart-container {
    position: fixed;
    width: 290px;
    z-index: 10;
  }

  .empty-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 160px;
    color: $dark-grayish-blue;
    font-size: 1.2rem;
  }

  .cart-modal {
    position: absolute;
    background-color: $white;
    box-shadow: $box-shadow;
    width: 300px;
    max-width: 100%;
    height: auto;
    transition: all 0.3s ease-in 0.1s;
    top: 60px;
    left: -182px;
    border-radius: 5px;

    h2 {
      position: relative;
      font-size: 0.95rem;
      padding: 15px;
      &::after {
        content: "";
        position: absolute;
        border-bottom: 1px solid $light-grayish-blue;
        width: 100%;
        top: 55px;
        left: 0;
      }
    }

    &.not-show {
      transform: translateX(-28%);
    }
  }

  .photo-item-container {
    padding: 15px;
    display: flex;
    gap: 10px;
    figure {
      width: 20%;
      img {
        width: 100%;
        border-radius: 5px;
      }
    }
  }

  .product-description-container {
    .item-heading {
      color: $grayish-blue;
      font-size: 0.7rem;
    }
  }

  .price-description-container {
    display: flex;
    align-items: center;
    gap: 5px;
    font-size: 0.85rem;
  }

  .discounted-pricing {
    padding-top: 5px;
    gap: 5px;
    color: $dark-grayish-blue;
  }
  .times,
  .quantity-value,
  .total-pricing {
    align-self: center;
    position: relative;
    top: 2px;
  }

  .times,
  .quantity-value {
    color: $dark-grayish-blue;
  }

  .total-pricing {
    color: $very-dark-blue;
    font-weight: bold;
  }

  .delete-cta {
    svg {
      width: 14px;
      height: 23px;
    }
  }

  .checkout-cta {
    @include ctaBtns();
    position: relative;
    top: 10px;
    width: 86%;
    margin-left: 14px;
    height: 45px;
  }
}

.desktop-menu {
  padding-left: 0.2rem;
  order: 1;
  display: none;
}

.nav-left,
.nav-right {
  display: flex;
  align-items: center;
  gap: 13px;

  button {
    @include buttonNoBGNoBorder();
    svg {
      width: 25px;
      height: 20px;
      path {
        transform: scale(1);
      }
    }
  }
}

.nav-left {
  position: relative;
  top: 5px;
  button > svg {
    padding-top: 5px;
  }

  @media screen and (max-width: 292px) {
    margin: 0 auto;
  }

  padding-left: 2px;
}

.nav-right {
  gap: 18px;
  padding-right: 4px;

  .add-to-cart {
    top: 5px;
  }

  @media screen and (max-width: 292px) {
    margin: 0 auto;
    padding-top: 0.5rem;
  }

  figure {
    border: 2px solid transparent;
    width: 38px;
    height: 38px;
    border-radius: 50%;
    transition: border 0.3s ease-in 0.1s;
    cursor: pointer;
    &:hover {
      border: 2px solid $orange;
    }
  }
  .avatar {
    width: 35px;
  }
}

.add-to-cart {
  position: relative;

  .span-quantity {
    position: absolute;
    bottom: 15px;
    left: 8px;
    background-color: $orange;
    padding-inline: 6px;
    font-size: 0.7rem;
    color: $light-grayish-blue;
    border-radius: 15px;
    width: fit-content;
    text-align: center;
    font-weight: bold;
    opacity: 0;
    transition: opacity 0.3s ease-in 0.1s;
    &.show {
      opacity: 1;
    }
  }
}

.menu-opened {
  position: fixed;
  top: 0;
  left: 0;
  background-color: $white;
  padding: 10px;
  width: 60%;
  max-width: 400px;
  min-height: 100vh;
  z-index: 11;
  transition: opacity 0.2s ease-in 0.1s, transform 0.2s ease-in-out 0.1s;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 15px;
}

.menu-opened ul > li {
  padding: 10px;
  list-style: none;

  .mobile-links {
    position: relative;
    color: $very-dark-blue;
    font-weight: bold;
    cursor: pointer;
    @include expandBorderFromCenter();
  }
}

.close-menu-btn {
  @include buttonNoBGNoBorder();
  padding: 10px;
}

// MAIN

.shoe-product {
  display: flex;
  flex-direction: column;
}

.shoes-product-gallery-container {
  order: -1;
}

.shoe-product-gallery {
  position: relative;

  figure {
    // display: block;
    position: absolute;
    width: 100%;
    transition: opacity 0.3s ease-in-out 0.1s, transform 0.3s ease-in-out 0.1s;
    cursor: pointer;
    img {
      width: 100%;
      max-width: 1023px;
    }
  }
}

.shoe-product-gallery-preview {
  display: none;
}
/* ... */

